Add delete site feature
